# tan93-entropy-decision-trees

./: pyproject.toml
dataset/: feature_costs.csv  test_employee_data.csv  train_employee_data.csv
decision_trees/: custom_decision_tree.py  random_forests.py  scratch_decision_tree.py  toolbox_decision_tree.py
