[project]
name = "decision-trees"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.21",
    "imbalanced-learn>=0.14.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "utils",
]

[tool.uv.workspace]
members = [
    "packages/*",
]


[tool.uv.sources]
utils = { workspace = true }
